fix: Projects title aligning on left

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,7 @@ ul{
     font-size: 28px;
     font-weight: bold;
     margin-top: 20px;
+    text-align: center;
 }
 .box{
     width: 200px;
@@ -137,9 +138,7 @@ ul{
     justify-content: center;
     align-items: center;
 }
-#history .section-title{
-    text-align: center;
-}
+
 
 .call{
     display: flex;
